--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ Gestion des demandes clients multicanales<br>
 Suivi de la qualité de service et satisfaction client<br>
  </p>
 <p>Je viens d’éditer ce fichier sur GitHub !</p>	
+<p>Je viens d’éditer ce fichier en local !</p>	
 <a href= "http://www.wildcodeschool.com"> Wild Code Shcool </a>
 </body> 
 
